# ehm_dmrg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: combined_df.csv  dmrg_ehm_init.ipynb  dmrg_ehm_init_data_generation.ipynb  dmrg_ehm_init_data_selection.ipynb  dmrg_ehm_init_make_ehm.ipynb  dmrg_ehm_init_make_ehm_extended.ipynb
src/ehm_dmrg/: __init__.py  dmrg_features.py  dmrg_performance_metrics.py  ehm_dmrg.py  ehm_generation.py  ehm_utils.py  graph_mapping.py
tests/: test_ehm_dmrg.py
